--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
 								<br/> or choose your own image
 							</span>
 					</div>
+					  <div class="mb-5 bottom-right">
+						  <button id="start" class="btn btn-success mt-5 me-3">Start</button>
+						</div>
 				</div>
 			  </div>
 		</div>
